option('pulseaudio', type: 'feature', value: 'auto')
option('pipewire', type: 'feature', value: 'auto')
# Use the simpler ASCII-only implementation of KeybindMap defined in
# keybind_map_ascii.c
# By default, MPL uses the UTF-8 implementation in keybind_map.cpp
option('ascii_keybinds', type: 'boolean', value: false)

# Options for MPL development - don't enable these unless you know what you're doing:
option('test_config', type: 'boolean', value: false) # Read ../test/mpl.conf instead of the usual config locations
